Home Page and Finishing touches on setting up Database

--- a/E-Commerce-Backend/.env
+++ b/E-Commerce-Backend/.env
@@ -1,2 +1,2 @@
-DBUSERNAME = dvirak
-DBPASSWORD = idkmypasswordatmbutififigureitoutillputithere
+JWT_SECRET = dsasdfghijhnfdhieuoihiuo235yorh3qh
+PORT = 3000
