--- a/eCommerceFE/package.json
+++ b/eCommerceFE/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "react-window": "^1.8.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
